# dydisnix-avahi

./: README.md  bootstrap  configure.ac  dydisnix-avahi-module.nix  release.nix
scripts/: Makefile.am  dydisnix-publishinfra-avahi.in
src/: Makefile.am  main.c
